SERVER-42373 Prevent "invalid view definition" error while dropping nonexistent collection

(cherry picked from commit 00bd5405dfaa44f3094965cf6bb0e6dc55062b99)